<resources>
    <string name="app_name">Calculadora</string>
    <string name="mais">+</string>
    <string name="virgula">,</string>
    <string name="menos">-</string>
    <string name="dividir">/</string>
    <string name="zero">0</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="multiplicar">X</string>
    <string name="iqual">=</string>
    <string name="clear">C</string>
    <string name="maismenos">+/-</string>
    <string name="percent">%</string>
</resources>
